--- a/chat-room/server/pyproject.toml
+++ b/chat-room/server/pyproject.toml
@@ -7,6 +7,12 @@ name = "server"
 requires-python = ">=3.12"
 description = "Messing around with sockets, and selectors"
 dynamic = ["version", "authors", "license"]
+dependencies = [
+    "kchat-shared @ {root:uri}/../shared",
+]
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [tool.hatch.metadata.hooks.custom]
 path = "metadata.py"
