--- a/chat-room/server/pyproject.toml
+++ b/chat-room/server/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "server"
+name = "kchat-server"
 requires-python = ">=3.12"
 description = "Messing around with sockets, and selectors"
 dynamic = ["version", "authors", "license"]
